@@ -452,7 +452,7 @@ sub literal_like {
 # ###########################################################################
 
 # ###########################################################################
-# OptionParser package 5839
+# OptionParser package 5928
 # ###########################################################################
 package OptionParser;
 
@@ -883,66 +883,93 @@ sub get_opts {
       }
    }
 
-   foreach my $long ( keys %{$self->{opts}} ) {
-      my $opt = $self->{opts}->{$long};
-      if ( $opt->{got} ) {
-         if ( exists $self->{disables}->{$long} ) {
-            my @disable_opts = @{$self->{disables}->{$long}};
-            map { $self->{opts}->{$_}->{value} = undef; } @disable_opts;
-            MKDEBUG && _d('Unset options', @disable_opts,
-               'because', $long,'disables them');
-         }
+   $self->_check_opts( keys %{$self->{opts}} );
+   $self->{got_opts} = 1;
+   return;
+}
 
-         if ( exists $self->{allowed_groups}->{$long} ) {
+sub _check_opts {
+   my ( $self, @long ) = @_;
+   my $long_last = scalar @long;
+   while ( @long ) {
+      foreach my $i ( 0..$#long ) {
+         my $long = $long[$i];
+         next unless $long;
+         my $opt  = $self->{opts}->{$long};
+         if ( $opt->{got} ) {
+            if ( exists $self->{disables}->{$long} ) {
+               my @disable_opts = @{$self->{disables}->{$long}};
+               map { $self->{opts}->{$_}->{value} = undef; } @disable_opts;
+               MKDEBUG && _d('Unset options', @disable_opts,
+                  'because', $long,'disables them');
+            }
 
-            my @restricted_groups = grep {
-               !exists $self->{allowed_groups}->{$long}->{$_}
-            } keys %{$self->{groups}};
+            if ( exists $self->{allowed_groups}->{$long} ) {
 
-            my @restricted_opts;
-            foreach my $restricted_group ( @restricted_groups ) {
-               RESTRICTED_OPT:
-               foreach my $restricted_opt (
-                  keys %{$self->{groups}->{$restricted_group}} )
-               {
-                  next RESTRICTED_OPT if $restricted_opt eq $long;
-                  push @restricted_opts, $restricted_opt
-                     if $self->{opts}->{$restricted_opt}->{got};
+               my @restricted_groups = grep {
+                  !exists $self->{allowed_groups}->{$long}->{$_}
+               } keys %{$self->{groups}};
+
+               my @restricted_opts;
+               foreach my $restricted_group ( @restricted_groups ) {
+                  RESTRICTED_OPT:
+                  foreach my $restricted_opt (
+                     keys %{$self->{groups}->{$restricted_group}} )
+                  {
+                     next RESTRICTED_OPT if $restricted_opt eq $long;
+                     push @restricted_opts, $restricted_opt
+                        if $self->{opts}->{$restricted_opt}->{got};
+                  }
+               }
+
+               if ( @restricted_opts ) {
+                  my $err;
+                  if ( @restricted_opts == 1 ) {
+                     $err = "--$restricted_opts[0]";
+                  }
+                  else {
+                     $err = join(', ',
+                               map { "--$self->{opts}->{$_}->{long}" }
+                               grep { $_ } 
+                               @restricted_opts[0..scalar(@restricted_opts) - 2]
+                            )
+                          . ' or --'.$self->{opts}->{$restricted_opts[-1]}->{long};
+                  }
+                  $self->save_error("--$long is not allowed with $err");
                }
             }
 
-            if ( @restricted_opts ) {
-               my $err;
-               if ( @restricted_opts == 1 ) {
-                  $err = "--$restricted_opts[0]";
-               }
-               else {
-                  $err = join(', ',
-                            map { "--$self->{opts}->{$_}->{long}" }
-                            grep { $_ } 
-                            @restricted_opts[0..scalar(@restricted_opts) - 2]
-                         )
-                       . ' or --'.$self->{opts}->{$restricted_opts[-1]}->{long};
-               }
-               $self->save_error("--$long is not allowed with $err");
-            }
+         }
+         elsif ( $opt->{is_required} ) { 
+            $self->save_error("Required option --$long must be specified");
          }
 
-      }
-      elsif ( $opt->{is_required} ) { 
-         $self->save_error("Required option --$long must be specified");
+         $self->_validate_type($opt);
+         if ( $opt->{parsed} ) {
+            delete $long[$i];
+         }
+         else {
+            MKDEBUG && _d('Temporarily failed to parse', $long);
+         }
       }
 
-      $self->_validate_type($opt);
+      die "Failed to parse options, possibly due to circular dependencies"
+         if @long == $long_last;
+      $long_last = @long;
    }
 
-   $self->{got_opts} = 1;
    return;
 }
 
 sub _validate_type {
    my ( $self, $opt ) = @_;
-   return unless $opt && $opt->{type};
+   return unless $opt;
+
+   if ( !$opt->{type} ) {
+      $opt->{parsed} = 1;
+      return;
+   }
+
    my $val = $opt->{value};
 
    if ( $val && $opt->{type} eq 'm' ) {  # type time
@@ -972,7 +999,14 @@ sub _validate_type {
       my $from_key = $self->{defaults_to}->{ $opt->{long} };
       if ( $from_key ) {
          MKDEBUG && _d($opt->{long}, 'DSN copies from', $from_key, 'DSN');
-         $prev = $self->{opts}->{$from_key}->{value};
+         if ( $self->{opts}->{$from_key}->{parsed} ) {
+            $prev = $self->{opts}->{$from_key}->{value};
+         }
+         else {
+            MKDEBUG && _d('Cannot parse', $opt->{long}, 'until',
+               $from_key, 'parsed');
+            return;
+         }
       }
       my $defaults = $self->{dp}->parse_options($self);
       $opt->{value} = $self->{dp}->parse($val, $prev, $defaults);
@@ -1004,6 +1038,7 @@ sub _validate_type {
          $opt->{long}, 'type', $opt->{type}, 'value', $val);
    }
 
+   $opt->{parsed} = 1;
    return;
 }
 
@@ -5198,7 +5233,7 @@ sub _d {
 # ###########################################################################
 
 # ###########################################################################
-# QueryReportFormatter package 5877
+# QueryReportFormatter package 5921
 # ###########################################################################
 
 
@@ -5418,7 +5453,7 @@ sub event_report {
          }
          elsif ( $attrib_type eq 'string' ) {
             push @values,
-               format_string_list($vals),
+               format_string_list($vals, $opts{show_all}->{$attrib}),
                (map { '' } 0..9); # just for good measure
             $pct = '';
          }
@@ -5510,7 +5545,7 @@ sub format_bool_attrib {
 }
 
 sub format_string_list {
-   my ( $stats ) = @_;
+   my ( $stats, $show_all ) = @_;
    if ( exists $stats->{unq} ) {
       my $cnt_for = $stats->{unq};
       if ( 1 == keys %$cnt_for ) {
@@ -5525,13 +5560,18 @@ sub format_string_list {
       my $i = 0;
       foreach my $str ( @top ) {
          my $print_str;
-         if ( length $str > MAX_STRING_LENGTH ) {
+         if ( $str =~ m/(?:\d+\.){3}\d+/ ) {
+            $print_str = $str;  # Do not shorten IP addresses.
+         }
+         elsif ( length $str > MAX_STRING_LENGTH ) {
             $print_str = substr($str, 0, MAX_STRING_LENGTH) . '...';
          }
          else {
             $print_str = $str;
          }
-         last if (length $line) + (length $print_str)  > LINE_LENGTH - 27;
+         if ( !$show_all ) {
+            last if (length $line) + (length $print_str)  > LINE_LENGTH - 27;
+         }
          $line .= "$print_str ($cnt_for->{$str}), ";
          $i++;
       }
@@ -9758,12 +9798,13 @@ sub main {
                print "\n";
                print $qrf->event_report(
                   $ea,
-                  select => [ grep { $_ !~ m/^(?:pos_in_log)$/ } @select ],
-                  where  => $item,
-                  rank   => $rank,
-                  worst  => $orderby_attrib,
-                  reason => $explain_why ? $worst[$rank - 1]->[1] : '',
+                  select       => [grep { $_ !~ m/^(?:pos_in_log)$/ } @select],
+                  where        => $item,
+                  rank         => $rank,
+                  worst        => $orderby_attrib,
+                  reason       => $explain_why ? $worst[$rank - 1]->[1] : '',
                   no_zero_bool => !$o->get('zero-bool'),
+                  show_all     => $o->get('show-all'),
                );
                print $qrf->chart_distro(
                   $ea,
@@ -11406,6 +11447,18 @@ such list in the statement will be shortened.
 
 If it shortens something beyond recognition, you can find the original statement
 in the log, at the offset shown in the report header (see L<"OUTPUT">).
+
+=item --show-all
+
+type: Hash
+
+Show all values for these attributes.
+
+By default mk-query-digest only shows as many of an attribute's value that
+fit on a single line.  This option allows you to specify attributes for which
+all values will be shown (line width is ignored).  This only works for
+attributes with string values like user, host, db, etc.  Multiple attributes
+can be specified, comma-separated.
 
 =item --since
 
