@@ -1,0 +1,27 @@
+
+# Query 1: 0 QPS, 0x concurrency, ID 0x7CE9953EA3A36141 at byte 417 ______
+# This item is included in the report because it matches --limit.
+#              pct   total     min     max     avg     95%  stddev  median
+# Count        100       3
+# Exec time    100     2ms   613us   613us   613us   613us       0   613us
+# Lock time     99   321us   107us   107us   107us   107us       0   107us
+# Rows sent    100     690     230     230     230     230       0     230
+# Rows exam    100     690     230     230     230     230       0     230
+# Users                  1 chessguest
+# Hosts                  3 123.123.123.121 (1), 123.123.123.122 (1), 123.123.123.123 (1)
+# Time range 2009-12-05 19:55:11 to 2009-12-05 19:55:11
+# bytes        100      31      10      11   10.33   10.84    0.47    9.83
+# Rows affe      0       0       0       0       0       0       0       0
+# Rows read    100     690     230     230     230     230       0     230
+# Query_time distribution
+#   1us
+#  10us
+# 100us  ################################################################
+#   1ms
+#  10ms
+# 100ms
+#    1s
+#  10s+
+# EXPLAIN
+select foo
+\G
